[tool.poetry]
name = "fastest-asyncapi"
version = "0.1.0"
description = ""
authors = ["Sergei Konik <s.konik.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "fastest_asyncapi"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncapi-container = "0.3.0"
fastapi = "^0.109.0"
jinja2 = "^3.1.3"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
